// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DbStore Create Test: Before reset on mount 1`] = `
Object {
  "errors": Object {
    "formModel": Object {
      "errors": Array [
        "a",
        "b",
      ],
    },
  },
  "formData": Object {
    "authForm": undefined,
    "formModel": Object {
      "guestName": "myText",
      "myVal": 420,
    },
  },
  "loading": Object {
    "formModel": false,
  },
}
`;

exports[`DbStore Create Test: Before reset on mount 2`] = `
Object {
  "errors": Object {
    "createpref": Object {
      "formModel": Object {
        "errors": Array [
          "a",
          "b",
        ],
      },
    },
    "formModel": Object {
      "errors": Array [
        "a",
        "b",
      ],
    },
  },
  "formData": Object {
    "authForm": undefined,
    "createpref": Object {
      "formModel": Object {
        "guestName": "SECOND OBJECT",
        "myVal": 421,
      },
    },
    "formModel": Object {
      "guestName": "myText",
      "myVal": 420,
    },
  },
  "loading": Object {
    "createpref": Object {
      "formModel": false,
    },
    "formModel": false,
  },
}
`;

exports[`DbStore Create Test: after create 1`] = `
<div>
  {
  "error": null,
  "state": {
    "guestName": "myText",
    "myVal": 420,
    "id": 0
  },
  "loading": false,
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Create Test: after login 1`] = `
<div>
  {
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Create Test: after purposely set invalid err 1`] = `
<div>
  {
  "error": {
    "errors": [
      "a",
      "b"
    ]
  },
  "loading": false,
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Create Test: after reset on mount 1`] = `
Object {
  "errors": Object {
    "formModel": Object {
      "errors": Array [
        "a",
        "b",
      ],
    },
  },
  "formData": Object {
    "authForm": undefined,
    "formModel": Object {
      "guestName": "myText",
      "myVal": 420,
    },
  },
  "loading": Object {
    "formModel": false,
  },
}
`;

exports[`DbStore Create Test: after reset on mount 2`] = `
Object {
  "errors": Object {
    "createpref": Object {
      "formModel": Object {
        "errors": Array [
          "a",
          "b",
        ],
      },
    },
    "formModel": Object {
      "errors": Array [
        "a",
        "b",
      ],
    },
  },
  "formData": Object {
    "authForm": undefined,
    "createpref": Object {
      "formModel": Object {
        "guestName": "SECOND OBJECT",
        "myVal": 421,
      },
    },
    "formModel": Object {
      "guestName": "myText",
      "myVal": 420,
    },
  },
  "loading": Object {
    "createpref": Object {
      "formModel": false,
    },
    "formModel": false,
  },
}
`;

exports[`DbStore Create Test: before create 1`] = `
<div>
  {
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Create Test: before login 1`] = `
<div>
  {
  "user": null
}
</div>
`;

exports[`DbStore Create Test: hidden in create 1`] = `
<div>
  {
  "error": {
    "errors": [
      "a",
      "b"
    ]
  },
  "loading": false,
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Create Test: hidden text 1`] = `
<div>
  {
  "error": {
    "errors": [
      "a",
      "b"
    ]
  },
  "loading": false,
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Create Test: not hidden in create 1`] = `
<div>
  {
  "error": {
    "errors": [
      "a",
      "b"
    ]
  },
  "loading": false,
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Create Test: prefixed after create 1`] = `
<div>
  {
  "error": null,
  "state": {
    "guestName": "SECOND OBJECT",
    "myVal": 421,
    "id": 1
  },
  "loading": false,
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Create Test: prefixed after purposely set invalid err 1`] = `
<div>
  {
  "error": {
    "errors": [
      "a",
      "b"
    ]
  },
  "loading": false,
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Create Test: prefixed before create 1`] = `
<div>
  {
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Create Test: prefixed hidden in create 1`] = `
<div>
  {
  "error": {
    "errors": [
      "a",
      "b"
    ]
  },
  "loading": false,
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Create Test: prefixed hidden text 1`] = `
<div>
  {
  "error": {
    "errors": [
      "a",
      "b"
    ]
  },
  "loading": false,
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Create Test: prefixed not hidden in create 1`] = `
<div>
  {
  "error": {
    "errors": [
      "a",
      "b"
    ]
  },
  "loading": false,
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Create Test: prefixed while loading 1`] = `
<div>
  {
  "error": null,
  "state": {
    "guestName": "SECOND OBJECT",
    "myVal": 421,
    "id": 1
  },
  "loading": false,
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Create Test: resetOnMount = true 1`] = `
<div>
  {
  "error": {
    "errors": [
      "a",
      "b"
    ]
  },
  "loading": false,
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Create Test: resetOnMount = true 2`] = `
<div>
  {
  "error": {
    "errors": [
      "a",
      "b"
    ]
  },
  "loading": false,
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Create Test: while loading 1`] = `
<div>
  {
  "error": null,
  "state": {
    "guestName": "myText",
    "myVal": 420,
    "id": 0
  },
  "loading": true,
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;
